tdf#106488 - workaround to disable un-necessary locking for the kit.

Not ideal, not suitable for Android etc. Better fix in online/master.

Change-Id: I49299cdae19fa91c294196e6d82582aaf376fab7